# jackdaw

./: Cargo.toml  README.md
.github/workflows/: build.yml  ci.yaml
assets/: animated_cube.jsn
book/src/: SUMMARY.md
crates/bevy_window_chrome/: Cargo.toml  README.md
crates/bevy_window_chrome/examples/: basic.rs
crates/bevy_window_chrome/src/: lib.rs  macos_titlebar.rs  plugin.rs  resize.rs  shell.rs  title_bar.rs  window.rs
crates/bevy_window_chrome/src/caption_controls/: caption.rs  caption_actions.rs  mod.rs
crates/jackdaw_animation/: Cargo.toml
crates/jackdaw_api/: Cargo.toml
crates/jackdaw_api_internal/: Cargo.toml
crates/jackdaw_api_macros/: Cargo.toml
crates/jackdaw_avian_integration/: Cargo.toml
crates/jackdaw_avian_integration/src/: lib.rs
crates/jackdaw_camera/: Cargo.toml
crates/jackdaw_camera_rig/: Cargo.toml
crates/jackdaw_camera_rig/src/: lib.rs
crates/jackdaw_commands/: Cargo.toml
crates/jackdaw_csg/: Cargo.toml
crates/jackdaw_csg/src/: lib.rs
crates/jackdaw_csg/tests/: beveled_cube_subtract.rs  boolean_no_bevy.rs  box_cutter_against_concave.rs  corner_bite_subtract.rs
crates/jackdaw_dylib/: Cargo.toml
crates/jackdaw_feathers/: Cargo.toml
crates/jackdaw_feathers/examples/: color_picker.rs
crates/jackdaw_feathers/src/: alert.rs  button.rs  checkbox.rs  collapsible.rs  dialog.rs  file_browser.rs  icons.rs  inspector_card.rs  inspector_field.rs  lib.rs  list_view.rs  menu_bar.rs  panel_header.rs  panel_section.rs  picker.rs  popover.rs  status_bar.rs  text_edit.rs  toast.rs  tokens.rs  tooltip.rs  tree_view.rs  variant_edit.rs  vector_edit.rs
crates/jackdaw_feathers/src/color_picker/: input_fields.rs  mod.rs  setup.rs
crates/jackdaw_fuzzy/: Cargo.toml
crates/jackdaw_geometry/: Cargo.toml
crates/jackdaw_geometry/src/: face_mesh.rs  halfspace_clip.rs  lib.rs  mirror.rs  modifiers.rs  newell.rs  ray.rs  topology.rs  topology_convexity.rs  triangulate.rs
crates/jackdaw_geometry/src/halfedge/: edit.rs  lift.rs  mod.rs  types.rs
crates/jackdaw_geometry/src/halfedge/ops/: bisect_plane.rs  delete_elements.rs  dissolve_edges.rs  dissolve_verts.rs  edge_bevel.rs  edge_slide.rs  extrude_face_region.rs  face_create.rs  face_poke.rs  face_retriangulate.rs  inset_face.rs  mod.rs  remove_doubles.rs  vertex_bevel.rs  vertex_slide.rs
crates/jackdaw_geometry/tests/: cuboid.rs  diagnose_dissolve_render.rs  halfedge_bisect_plane.rs  halfedge_bridge.rs  halfedge_contextual_create.rs  halfedge_cycles.rs  halfedge_delete_elements.rs  halfedge_dissolve_edges.rs  halfedge_dissolve_verts.rs  halfedge_edge_bevel.rs  halfedge_edge_slide.rs  halfedge_extrude.rs  halfedge_face_poke.rs  halfedge_face_retriangulate.rs  halfedge_flatten.rs  halfedge_knife.rs  halfedge_lift.rs  halfedge_loop_cut.rs  halfedge_types.rs  halfedge_vertex_bevel.rs  halfedge_vertex_slide.rs  newell.rs  topology_basics.rs  topology_convexity.rs  topology_edit.rs  triangulate.rs
crates/jackdaw_hull/: Cargo.toml
crates/jackdaw_hull/src/: lib.rs
crates/jackdaw_jsn/: Cargo.toml
crates/jackdaw_jsn/src/: ast.rs  brush_chunks.rs  format.rs  lib.rs  loader.rs  mesh_rebuild.rs  types.rs
crates/jackdaw_jsn/tests/: clipboard_payload.rs
crates/jackdaw_loader/: Cargo.toml
crates/jackdaw_localization/: Cargo.toml
crates/jackdaw_localization/src/: lib.rs
crates/jackdaw_material/: Cargo.toml
crates/jackdaw_material/src/: lib.rs
crates/jackdaw_multiplayer/: Cargo.toml
crates/jackdaw_multiplayer/src/: lib.rs
crates/jackdaw_multiplayer/tests/: jsn_roundtrip.rs
crates/jackdaw_multiplayer_editor/: Cargo.toml
crates/jackdaw_multiplayer_editor/src/: lib.rs
crates/jackdaw_multiplayer_lightyear/: Cargo.toml
crates/jackdaw_multiplayer_lightyear/src/: camera_gate.rs  client.rs  lib.rs  lifecycle.rs  rate_limit.rs  registration.rs  rooms.rs  rpc.rs  server.rs  transitions.rs
crates/jackdaw_multiplayer_lightyear/tests/: tier1_connect_spawn.rs  tier2_aoi.rs  tier3_movement.rs  tier4_transition.rs  tier5_rpc.rs  tier6_turnkey_additions.rs  tier7_manual_spawn.rs
crates/jackdaw_node_graph/: Cargo.toml
crates/jackdaw_panels/: Cargo.toml
crates/jackdaw_pick/: Cargo.toml
crates/jackdaw_pick/src/: lib.rs
crates/jackdaw_pie_protocol/: Cargo.toml
crates/jackdaw_pie_protocol/src/: event.rs  frame.rs  input.rs  lib.rs  manifest.rs  snapshot.rs  transport.rs  transport_ipc.rs
crates/jackdaw_remote/: Cargo.toml
crates/jackdaw_runtime/: Cargo.toml
crates/jackdaw_runtime/src/: lib.rs  pie.rs  pie_frames.rs  pie_windowless.rs
crates/jackdaw_runtime/tests/: catalog_loading.rs  headless_brush_load.rs  headless_render_brush_load.rs  insert_observer_global_transform.rs  scene_root_name.rs
crates/jackdaw_rustc_wrapper/: Cargo.toml
crates/jackdaw_sdk/: Cargo.toml
crates/jackdaw_select/: Cargo.toml
crates/jackdaw_select/src/: lib.rs
crates/jackdaw_snap/: Cargo.toml
crates/jackdaw_snap/src/: lib.rs
crates/jackdaw_terrain/: Cargo.toml
crates/jackdaw_uv/: Cargo.toml
crates/jackdaw_uv/src/: lib.rs
crates/jackdaw_widgets/: Cargo.toml
examples/: basic.rs  components_in_editor.rs  navmesh_server.rs  remote_game.rs
examples/extension/: add_window.rs  (+2 more)
src/: add_entity_picker.rs  asset_browser.rs  asset_ingest.rs  brush_drag_ops.rs  brush_element_ops.rs  builtin_extensions.rs  clip_ops.rs  command_palette.rs  commands.rs  core_extension.rs  default_style.rs  edit_mode_ops.rs  entity_ops.rs  ext_build.rs  extension_lifecycle.rs  extensions_dialog.rs  face_grid.rs  game_panel.rs  gizmo_ops.rs  gizmos.rs  grid_ops.rs  hierarchy.rs  history_ops.rs  input_contexts.rs  keybind_focus.rs  keybind_settings.rs  layout.rs  lib.rs  live_edits.rs  live_edits_ui.rs  live_frame.rs  live_frame_view.rs  live_highlight.rs  live_input.rs  main.rs  material_browser.rs  material_preview.rs  measure_tool.rs  mesh_quick_menu.rs  migrate.rs  (+31 more)
tests/: asset_ingest.rs  brush_ops.rs  headless.rs  keymap_presets.rs  mesh_quick_menu.rs  modeling_essentials.rs  multi_viewport.rs  operator_smoke.rs  operator_tooltip.rs  positionable_mirror_plane.rs  prefab_lifecycle.rs  scenes_swap.rs
(+125 files in other folders)
