[package]
name = "jackdaw_avian_integration"
version = "0.5.0"
edition = "2024"
description = "Internal crate for the jackdaw editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[dependencies]
bevy.workspace = true
avian3d = { workspace = true }
jackdaw_jsn = { version = "0.5.0", path = "../jackdaw_jsn" }
jackdaw_geometry = { version = "0.5.0", path = "../jackdaw_geometry" }

[features]
default = ["overlays"]
# Editor-only collider/sensor wireframe gizmos and hierarchy arrows. Pulls
# avian's `debug-plugin` (`PhysicsGizmoExt::draw_collider`, the `PhysicsGizmos`
# config group). The runtime collider bridge builds without it.
overlays = ["avian3d/debug-plugin"]

[lints]
workspace = true
