[package]
name = "jackdaw_geometry"
version = "0.5.0"
edition = "2024"
description = "Internal crate for the jackdaw editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[dependencies]
glam.workspace = true
bevy = { version = "0.19", default-features = false, optional = true, features = [
    "reflect_auto_register",
    "std",
    "serialize",
    "bevy_asset",
] }
slotmap = "1.0"
earcutr = "0.5"
cdt = "0.1"
bitflags = "2"
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
glam.workspace = true
jackdaw_jsn = { path = "../jackdaw_jsn", default-features = false }
serde_json = { workspace = true }

[features]
default = ["render"]
# `render` is the full Bevy-facing build used by the editor: reflection, ECS
# component derives, and StandardMaterial handles on faces. The engine-agnostic
# core consumed by the Godot binding is the `--no-default-features` build:
# glam + serde only, String materials, no derives.
render = ["dep:bevy", "bevy/bevy_pbr", "bevy/bevy_render"]

[lints]
workspace = true
