[package]
name = "jackdaw_pick"
version = "0.5.0"
edition = "2024"
description = "Engine-agnostic picking queries (ray-vs-face, point-in-polygon) for the jackdaw editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[dependencies]
glam.workspace = true
# Path dep with no default features so the bevy-gated `render` feature of
# jackdaw_geometry is never pulled in; this keeps jackdaw_pick bevy-free.
jackdaw_geometry = { version = "0.5.0", path = "../jackdaw_geometry", default-features = false }

[lints]
workspace = true
