[package]
name = "jackdaw_runtime"
version = "0.5.0"
edition = "2024"
description = "Runtime scene loader for the Jackdaw editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "reflect_auto_register",
    "std",
    "serialize",
    "bevy_asset",
    "bevy_camera",
    "bevy_scene",
    "bevy_log",
] }
jackdaw_jsn = { version = "0.5.0", path = "../jackdaw_jsn", default-features = false }
jackdaw_geometry = { version = "0.5.0", path = "../jackdaw_geometry", default-features = false }
jackdaw_pie_protocol = { path = "../jackdaw_pie_protocol", optional = true }
jackdaw_camera_rig = { version = "0.5.0", path = "../jackdaw_camera_rig", optional = true }
# Runtime collider bridge: the `AvianCollider` -> `Collider` conversion. Default
# features are kept so this resolves to the same build as the editor's dependency
# (no cargo recompile churn when alternating editor and game builds). The unused
# overlay gizmos are dead code in the game; a lean release build can override with
# `default-features = false`.
jackdaw_avian_integration = { version = "0.5.0", path = "../jackdaw_avian_integration", optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror = "2"

[features]
default = ["render"]
render = [
    "bevy/bevy_pbr",
    "bevy/bevy_render",
    "bevy/bevy_image",
    "jackdaw_jsn/render",
    "jackdaw_geometry/render",
]
# Play-in-editor: connect to the editor over ipc-channel, stream the
# scene's ECS state, and apply control commands. Off by default so the
# protocol and ipc-channel stay out of the standalone runtime build.
# Frame capture renders the active camera rig offscreen and reads it
# back, which needs bevy's gpu readback (bevy_render) and Image
# (bevy_image) even when the `render` feature is off.
pie = [
    "dep:jackdaw_pie_protocol",
    "jackdaw_pie_protocol/ipc",
    "dep:jackdaw_camera_rig",
    "bevy/bevy_render",
    "bevy/bevy_image",
    "bevy/mesh_picking",
]
# Avian physics: build `Collider`s from authored `AvianCollider` components at
# runtime so brushes collide in the standalone game and in PIE, not only in the
# editor preview. Add `PhysicsPlugins` in your app to actually simulate.
physics = ["dep:jackdaw_avian_integration"]

[lints]
workspace = true
