[package]
name = "jackdaw_select"
version = "0.5.0"
edition = "2024"
description = "Engine-agnostic half-edge selection traversal for the jackdaw editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[dependencies]
glam.workspace = true
# Path dep with no default features so the bevy-gated `render` feature of
# jackdaw_geometry is never pulled in; this keeps jackdaw_select bevy-free.
jackdaw_geometry = { version = "0.5.0", path = "../jackdaw_geometry", default-features = false }

[lints]
workspace = true
