[package]
name = "jackdaw_snap"
version = "0.5.0"
edition = "2024"
description = "Engine-agnostic snapping math for the jackdaw editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[dependencies]
glam.workspace = true
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
