[package]
name = "jackdaw_terrain"
version = "0.5.0"
edition = "2024"
description = "Internal crate for the jackdaw editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[dependencies]
noise.workspace = true
rand.workspace = true
bevy_math = "0.19"

[lints]
workspace = true
